refactor: clean up code by removing unused imports, optimizing key usage in map functions, and enhancing logging for error handling